<resources>
    <string name="app_name">Project IMO</string>
    <string name="title_home">Главное</string>
    <string name="title_company">Компании</string>
    <string name="title_rating">Рейтинг</string>
    <string name="subject_name">Наименование дисциплины</string>
    <string name="tasks">Задачи</string>
    <string name="coins">Коины</string>
    <string name="progress">Успеваемость</string>
    <string name="attendance">Посещяемость</string>
    <string name="homework">Д/З</string>
    <string name="result">Итого</string>
    <string name="goal">Еженедельная цель</string>
    <string name="leader">Лидер недели</string>
    <string name="navLeader">Лидер недели</string>
    <string name="navGoal">Еженедельная цель</string>
    <string name="coinsName">Коины</string>
    <string name="profile">Профиль</string>
    <string name="studentName">ФИО студента</string>
    <string name="number">Оценки</string>
    <string name="FIO">ФИО</string>
    <string name="N">№</string>
    <string name="date">Дата</string>
    <string name="dateChange">Выберите дату</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Эл/почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Вход/Регистрация</string>
    <string name="AR">Авторизация</string>
    <string name="userName">Введите имя</string>
    <string name="userEmail">Введите эл/почту</string>
    <string name="userPassword">Пароль</string>
    <string name="userPhone">Телефон</string>
    <string name="haveAcount">Есть аккаунт</string>
    <string name="register">Регистрация</string>
    <string name="login">Войти</string>
    <string name="logout">Выйти</string>
    <string name="addCoins">Добавить коины</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>