<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/coins"
        android:icon="@drawable/icon_coin"
        android:title="@string/tasks"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/title_home"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_goal"
        android:icon="@drawable/icon_goal"
        android:title="@string/goal"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_leader"
        android:icon="@drawable/icon_leader"
        android:title="@string/leader"
        app:showAsAction="always"/>
</menu>