<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.projectimo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_company"
        android:name="com.example.projectimo.ui.company.CompanyFragment"
        android:label="@string/title_company"
        tools:layout="@layout/fragment_company" />

    <fragment
        android:id="@+id/navigation_rating"
        android:name="com.example.projectimo.ui.rating.RatingFragment"
        android:label="@string/title_rating"
        tools:layout="@layout/fragment_rating" />
    <fragment
        android:id="@+id/subjectOne"
        android:name="com.example.projectimo.SubjectOne"
        android:label="@string/title_subject_one"
        tools:layout="@layout/fragment_subject_one" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.projectimo.MainActivity"
        android:label="MainActivity" />
    <fragment
        android:id="@+id/blankFragment"
        android:name="com.example.projectimo.BlankFragment"
        android:label="fragment_blank"
        tools:layout="@layout/fragment_blank" />
    <fragment
        android:id="@+id/type1"
        android:name="com.example.projectimo.Type1"
        android:label="Type1" />
    <fragment
        android:id="@+id/type2"
        android:name="com.example.projectimo.Type2"
        android:label="Type2" />
</navigation>