<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/textStyle"
    tools:context=".BlankFragment">

    <TableLayout

        android:id="@+id/tableLayout"
        style="@style/tableStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="118dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/task"
                android:paddingLeft="30dp"
                android:text="@string/tasks"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/coins"
                android:text="@string/coins"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D0E8F1">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/sub"
                android:paddingLeft="20dp"
                android:text="@string/progress"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/sub2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="173dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/sub_dark"
                android:paddingLeft="20dp"
                android:text="@string/attendance"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/attendance"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/sub2_dark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D0E8F1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/sub"
                android:paddingLeft="20dp"
                android:text="@string/homework"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/homework"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/sub2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="285dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/itog3"
                android:paddingLeft="20dp"
                android:text="@string/result"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/coins_itog" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/butAttendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_background_blue2"
        android:text="@string/attendance"
        android:textColor="@drawable/text_color_change"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butProgress"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/butHomework4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_background_blue3"
        android:text="@string/homework"
        android:textColor="@drawable/text_color_change"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butAttendance"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/butHomework"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/block_4"
        android:text="@string/homework"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butHomework4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/butProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background_blue"
        android:paddingBottom="5dp"
        android:text="@string/progress"
        android:textAlignment="center"
        android:textColor="@drawable/text_color_change"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/main_tab2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="199dp"
        android:layout_height="47dp"
        android:text="@string/subject_name"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.465" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ell"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="108dp"
        android:layout_height="21dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>