<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/textStyle"
    tools:context=".Attendance">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:text="@string/subject_name" />

    <CalendarView
        android:id="@+id/calendarView2"
        android:layout_width="match_parent"
        android:layout_height="302dp"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="2dp"
        android:animateLayoutChanges="true"
        android:animationCache="true"
        android:fadeScrollbars="false"
        android:filterTouchesWhenObscured="false"
        android:fitsSystemWindows="false"
        android:minDate="01/01/2020"
        android:scrollbarDefaultDelayBeforeFade="200"
        android:shownWeekCount="4" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/calendarView2"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00B0F3">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/N" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/FIO" />

                    <TextView
                        android:id="@+id/editTextDate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:ems="5"
                        android:gravity="center"
                        android:hint="@string/dateChange"
                        android:textSize="13dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#D0E8F1">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="1" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/studentName" />

                    <EditText
                        android:id="@+id/editTextNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="1"
                        android:inputType="number" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="2" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/studentName" />

                    <EditText
                        android:id="@+id/editTextNumber2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="1"
                        android:inputType="number" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#D0E8F1">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="3" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/studentName" />

                    <EditText
                        android:id="@+id/editTextNumber3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="1"
                        android:inputType="number" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="4" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/studentName" />

                    <EditText
                        android:id="@+id/editTextNumber4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="1"
                        android:inputType="number" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#D0E8F1">

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="5" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/studentName" />

                    <EditText
                        android:id="@+id/editTextNumber5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="1"
                        android:inputType="number" />

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>